<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/txtUserCounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_user_counts"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtViaUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_via_upload" />

    <TextView
        android:id="@+id/txtviaImport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_via_import" />

    <TextView
        android:id="@+id/txtSourceCounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_source_counts"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtUploads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_uploads" />

    <TextView
        android:id="@+id/txtImports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_imports" />

</LinearLayout>