  <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp" >

        <LinearLayout
            android:id="@+id/textViews"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_album_data"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_id" />

            <TextView
                android:id="@+id/txtLinks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txt_links" />

            <TextView
                android:id="@+id/txtCreatedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txt_created_at" />

            <TextView
                android:id="@+id/txtUpdatedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txt_updated_at" />

            <TextView
                android:id="@+id/txtShortcut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txt_shortcut" />

            <LinearLayout
                android:id="@+id/linearName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_name" />

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:hint="Enter Album Name"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_description" />

            <TextView
                android:id="@+id/txtUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txt_user" />

            <LinearLayout
                android:id="@+id/linearModerateMedia"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtModerateMedia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_moderate_media" />

                <CheckBox
                    android:id="@+id/checkBoxModerateMedia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearModerateComments"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtModerateComments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_moderate_comments" />

                <CheckBox
                    android:id="@+id/checkBoxModerateComments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtCounters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_counters" />
        </LinearLayout>
    </ScrollView>


